<resources>
    <string name="app_name" translatable="false">CarWifi</string>
    <string name="button">Button</string>
    <string name="led01" translatable="false">Led - 01</string>
    <string name="led02" translatable="false">Led - 02</string>
    <string name="led03" translatable="false">Led - 03</string>
    <string name="led04" translatable="false">Led - 04</string>
    <string name="message">Mensagem</string>
    <string name="img_desc" translatable="false">img_desc</string>
    <string name="buzzer">Buzzer</string>
    <string name="backward">Backward</string>
    <string name="nr_1" translatable="false">1</string>
    <string name="nr_2" translatable="false">2</string>
    <string name="letter_r" translatable="false">R</string>
    <string name="letter_p" translatable="false">P</string>
    <string name="letter_3" translatable="false">3</string>
    <string name="letter_4" translatable="false">4</string>
    <string name="nr_3" translatable="false">3</string>
    <string name="nr_4" translatable="false">4</string>
    <string name="gyroflex">Gyroflex</string>
    <string name="headlight">Headlight</string>
    <string name="view_one">View 1</string>
    <string name="view_two">View 2</string>
    <string name="by_make" translatable="false">EduMigRafaSoft</string>
    <string name="ssid" translatable="false">SSID</string>
    <string name="password">Password</string>
    <string name="ssid_value" translatable="false">CARWIFI</string>
    <string name="password_value" translatable="false">car_Wifi</string>
    <string name="about">About</string>
    <string name="view_tree">View 3</string>
    <string name="view_four">View 4</string>
</resources>
